feat: add data about the 21 stages

--- a/2021/package.json
+++ b/2021/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "riders": "JSON_DIR=./json/ node src/riders.js",
+    "stages": "JSON_DIR=./json/ node src/stages.js",
     "images": "JSON_DIR=./json/ IMAGES_DIR=./images/ node src/images.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
